--- a/finetune-LLaMA.ipynb
+++ b/finetune-LLaMA.ipynb
@@ -1296,15 +1296,7 @@
     "id": "VCJnpZoayRgq"
    },
    "source": [
-    "### Sweet... it worked! The fine-tuned model now prints out journal entries in my style!\n",
-    "\n",
-    "How funny to see it write like me as an angsty teenager, and honestly adult. I am obsessed. It knows who my friends are and talks about them, and covers the same topics I usually cover. It's really cool.\n",
-    "\n",
-    "That output is quite private but I wanted you to see an example run, so I tweaked the `eval_prompt` so that it explicitly wouldn't say anything too sensitive, haha.\n",
-    "\n",
-    "I hope you enjoyed this tutorial on fine-tuning Mistral on your own data. If you have any questions, feel free to reach out to us on [X](https://x.com/brevdev) or [Discord](https://discord.gg/RN2a436M73).\n",
-    "\n",
-    "🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙"
+    "### it worked! The fine-tuned model now prints out journal entries in my style!\n"
    ]
   }
  ],
